--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ h3{
     text-align: center;
     text-decoration: none;
     cursor: default;
+    margin-top: 200px;
 }
 
 main{
@@ -65,6 +66,19 @@ main{
 article {
     margin-top: 30px;
     margin-bottom: 30px;
+    margin-left: 50px;
+}
+
+article h3{
+    text-decoration: underline;
+}
+
+strong {
+    text-decoration: underline;
+}
+
+.normal {
+    text-decoration: none;
 }
 
 .bg{
@@ -73,15 +87,15 @@ article {
     background-size: cover;
     background-position-x: center;
     background-repeat: no-repeat;
-    height: 100vh;
-    
+    height: 91vh;
+    padding-left: 100px;
 }
 
 .sombre{
     background-color: #0000003f;
     color: white;
     height: 100%;
-    padding-top: 139px;
+    padding-top: 80px;
 }
 
 .horizon{
@@ -97,7 +111,7 @@ article {
 }
 
 .tete{
-    margin: 5px;
+    margin: 10px;
 }
 
 .code{
