--- a/style.css
+++ b/style.css
@@ -61,8 +61,6 @@ h3{
 
 main{
     margin-top: 4rem;
-    padding-top: 30px;
-    margin-left: 50px;
 }
 
 main > ul {
@@ -86,6 +84,11 @@ article h3{
 
 strong {
     text-decoration: underline;
+}
+
+.margin {
+    padding-top: 30px;
+    margin-left: 50px;
 }
 
 .normal {
